controllers/refresolver/istiovirtualservice/testdata/istio_service_annotation_no_ips.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
  labels:
    app: istio-ingressgateway
  annotations:
    k8gb.io/exposed-ip-addresses: ""
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: istio-ingressgateway
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 10.0.0.1
