controllers/refresolver/istiovirtualservice/testdata/istio_service_no_ips.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
  labels:
    app: istio-ingressgateway
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: istio-ingressgateway
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
