controllers/refresolver/istiovirtualservice/testdata/istio_virtualservice_multiple_routes.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio
  namespace: test-gslb
  labels:
    app: istio
spec:
  gateways:
    - istio-ingress/istio
  hosts:
    - istio.cloud.example.com
  http:
    - match:
        - uri:
            prefix: /debug
      route:
        - destination:
            host: istio1
            port:
              number: 80
    - route:
        - destination:
            host: istio2
            port:
              number: 80
